Adding LINEACT links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="accueil">
         <div class="container">
             <div class="content">
-                <h2 style="text-align: center;">Bienvenue sur mon univers virtuel</h2>
+                <h2 style="text-align: center;">Bienvenue dans mon univers virtuel</h2>
                 <p>Je suis ravi de vous accueillir ici. Je m'appelle Paul Bréon et je suis étudiant en école d'ingénieur
                     informatique au CESI de Rouen. Ce site a été conçu pour vous présenter mon parcours, mes compétences
                     et
@@ -72,7 +72,8 @@
                     nombreuses compétences en informatique, notamment dans le développement en général, la programmation
                     orientée objet (POO) ainsi que dans le domaine des réseaux.</p>
 
-                <p> dehors de ma passion pour l'informatique, je suis un fervent musicien impliqué au sein de la Société
+                <p>En dehors de ma passion pour l'informatique, je suis un fervent musicien impliqué au sein de la
+                    Société
                     Musicale de Criquetot l'Esneval. En tant que batteur et chef d'orchestre pour l'orchestre des
                     jeunes, la
                     musique occupe une place très spéciale dans ma vie.</p>
@@ -166,6 +167,31 @@
     <div class="separator"></div>
 
     <section id="projets">
+        <h2 style="text-align: center;">Projets Réalisés au CESI LINEACT</h2>
+        <p style="text-align: center;"></p>
+        <h3 style="text-align: center;">Stage de fin de 2ème année au laboratoire CESI LINEACT</h3>
+        <div class="container">
+            <div class="content" style="text-align: center;">
+                <ul>
+                    <p>Dans le cadre d'un projet au laboratoire LINEACT j'ai eu l'occasion de travailler sur le lien de
+                        robots réel dans un univers virtuel via l'éditeur de jeux Unity afin de simuler la réalité. En
+                        plus de récupérer des
+                        informations réel virtuellement je transmet aussi des informations virtuelles au Robot réel dans
+                        le but de faire de la réalité augmentée. Lors de ce stage j'ai en somme lié un univers réel à un
+                        univers virtuel et permis aux deux univers de communiquer en simultané dans le but de faire de
+                        la réalité augmentée.</p>
+                    <p>J'ai par conséquent eu la chance de pouvoir manier de nombreux outils tel que Docker, Unity,
+                        Ubuntu ainsi que de multiples languages de programmation tel que le C# et le python.</p>
+                </ul>
+            </div>
+            <div class="image">
+                <img src="dl-files/Atelier-flexible-de-production_web-736x491.jpg" alt="CESI LINEACT présentation">
+            </div>
+        </div>
+    </section>
+    <div class="separator"></div>
+
+    <section id="projets">
         <h2 style="text-align: center;">Projets Personnels</h2>
         <p style="text-align: center;">Vous pourrez trouver certains de mes projets sur mon Github personnel.</p>
         <p style="text-align: center;">215Games</p>
@@ -186,7 +212,7 @@
                     <source src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.mp4" type="video/mp4">
                     Votre navigateur ne prend pas en charge la lecture de vidéos.
                 </video>
-                
+
             </div>
             <div class="content" style="text-align: center;">
                 <h3>VR Ping Pong</h3>
