Adding projets perso description and corriger les fautes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <div class="container">
             <div class="content">
                 <h2 style="text-align: center;">Bienvenue dans mon univers virtuel</h2>
-                <p>Je suis ravi de vous accueillir ici. Je m'appelle Paul Bréon et je suis étudiant en école d'ingénieur
+                <p>Je suis ravi de vous accueillir ici. Je m'appelle Paul Bréon et je suis étudiant en école
+                    d'ingénieurs
                     informatique au CESI de Rouen. Ce site a été conçu pour vous présenter mon parcours, mes compétences
                     et
                     mes passions dans le domaine de l'informatique et au-delà.</p>
@@ -52,8 +53,7 @@
                     intérêts.
                     N'hésitez pas à me contacter si vous souhaitez échanger ou collaborer sur des projets innovants.</p>
                 <p>Je vous remercie de votre visite et je vous souhaite une excellente découverte de mon univers
-                    numérique !
-                </p>
+                    numérique !</p>
             </div>
             <div class="image">
                 <img src="dl-files/Moi.jpg" alt="Image À Propos">
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="content">
                 <h2 style="text-align: center;">À Propos de Moi</h2>
-                <p>Je suis Paul Bréon, un étudiant en école d'ingénieur informatique au CESI de Rouen. Actuellement en
+                <p>Je suis Paul Bréon, un étudiant en école d'ingénieurs informatique au CESI de Rouen. Actuellement en
                     alternance au sein du laboratoire de recherche du CESI LINEACT, je me spécialise dans les domaines
                     passionnants de la réalité virtuelle et augmentée. Grâce à cette expérience, j'ai développé de
                     nombreuses compétences en informatique, notamment dans le développement en général, la programmation
@@ -175,9 +175,9 @@
                 <ul>
                     <p>Dans le cadre d'un projet au laboratoire LINEACT j'ai eu l'occasion de travailler sur le lien de
                         robots réel dans un univers virtuel via l'éditeur de jeux Unity afin de simuler la réalité. En
-                        plus de récupérer des
-                        informations réel virtuellement je transmet aussi des informations virtuelles au Robot réel dans
-                        le but de faire de la réalité augmentée. Lors de ce stage j'ai en somme lié un univers réel à un
+                        plus de récupérer des informations réelles virtuellement je transmets aussi des informations
+                        virtuelles au robots réel dans le but de faire de la réalité augmentée. Lors de ce stage j'ai
+                        en somme lié un univers réel à un
                         univers virtuel et permis aux deux univers de communiquer en simultané dans le but de faire de
                         la réalité augmentée.</p>
                     <p>J'ai par conséquent eu la chance de pouvoir manier de nombreux outils tel que Docker, Unity,
@@ -197,7 +197,7 @@
         <p style="text-align: center;">215Games</p>
         <p style="text-align: center;">(nom sous lequel je publie mes jeux vidéos)</p>
         <div class="imageCenter">
-            <img src="dl-files/215Games.png" alt="">
+            <img src="dl-files/215Games.png" alt="215Games logo" style="max-width: 10%;">
         </div>
         <div class="container">
             <div class="content" style="text-align: center;">
@@ -207,6 +207,31 @@
                     notamment la 2D et la 3D.</p>
                 <p>Ce projet m'a permis d'apprendre le développement en Programmation Orientée Objet puis de
                     l'approfondir pas à pas tout en découvrant le moteur de jeu Unity.</p>
+                <h4>Fonctionnalités</h4>
+                <ul style="text-align: left;">
+                    <li>Changement d'un espace 2D à 3D et inversement.</li>
+                    <li>Déplacement du joueur</li>
+                    <li>Menu principal</li>
+                    <ul>
+                        <li>Gestion des paramètres de résolution</li>
+                        <li>Plein écran</li>
+                        <li>Choisir son niveau ou jouer les niveaux dans l'ordre</li>
+                        <li>Crédits</li>
+                        <ul>
+                            <li>Défilement du texte</li>
+                            <li>Mensions légales</li>
+                        </ul>
+                        <li>Quitter le jeu</li>
+                    </ul>
+                    <li>Interface de dialogues</li>
+                    <li>Interface d'interractions</li>
+                    <li>Menu Pause</li>
+                    <ul>
+                        <li>Gestion des paramètres de résolution</li>
+                        <li>Plein écran</li>
+                        <li>Accéder au menu principal</li>
+                    </ul>
+                </ul>
                 <h4>Visuel</h4>
                 <video controls autoplay loop>
                     <source src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.mp4" type="video/mp4">
@@ -222,13 +247,22 @@
                 <p>Ce projet m'a permis d'approfondir mes compétences en réalité virtuelle comme en Unity et la gestion
                     de ses différents packages mais aussi sur les interractions que peuvent avoir un joueur dans un
                     espace virtuel.</p>
+                <h4>Fonctionnalités</h4>
+                <ul style="text-align: left;">
+                    <li>Attraper une raquette par main</li>
+                    <li>Se téléporter</li>
+                    <li>Attraper la balle</li>
+                </ul>
                 <h4>Visuel</h4>
+                <div class="imageCenter">
+                    <img src="dl-files/MicrosoftTeams-image.png" alt="Rendu jeux VR" style="max-width: 100%;">
+                </div>
             </div>
         </div>
-        <p style="text-align: center;">Lors de ses deux porjets j'ai appris aussi à faire mes propres recherche et à me
-            creuser la tête afin
-            d'aller toujours plus loin, chercher des idées, des solutions aux multiples problèmes auxquels j'ai été
-            confrontés et toujours m'assurer de documenter ce que je fais y compris et surtout les tests que je
+        <p style="text-align: center;">Lors de ses deux projets j'ai appris aussi à faire mes propres recherches et à me
+            creuser la tête afin d'aller toujours plus loin, chercher des idées, des solutions aux multiples problèmes
+            auxquels j'ai été confrontés et toujours m'assurer de documenter ce que je fais y compris et surtout les
+            tests que je
             faisais afin de ne plus refaire les mêmes erreurs à l'avenir et d'être certain d'avoir appris de
             celles-ci.</p>
         </div>
