--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 <h2 style="text-align: center;">Bienvenue dans mon univers virtuel</h2>
                 <p>Je suis ravi de vous accueillir ici. Je m'appelle Paul Bréon et je suis étudiant en école
                     d'ingénieurs
-                    informatique au CESI de Rouen. Ce site a été conçu pour vous présenter mon parcours, mes compétences
+                    informatique au CESI de Rouen. Ce site est conçu pour vous présenter mon parcours, mes compétences
                     et
                     mes passions dans le domaine de l'informatique et au-delà.</p>
                 <p>Ce site est également l'occasion de partager mes réflexions sur les nouvelles technologies, comme
-                    l'intelligence artificielle (IA) ou le développement de jeux vidéo qui représente des domaines qui
+                    l'intelligence artificielle (IA) ou le développement de jeux vidéo qui représentent des domaines qui
                     me
-                    fascine et qui suscite mon
+                    fascinent et qui suscitent mon
                     enthousiasme pour les possibilités futures.</p>
                 <p>Je vous invite à explorer les différentes sections de mon site pour en savoir plus sur mon parcours
                     professionnel, mes compétences techniques, mes projets passés et futurs, ainsi que mes autres
@@ -69,7 +69,7 @@
                 <p>Je suis Paul Bréon, un étudiant en école d'ingénieurs informatique au CESI de Rouen. Actuellement en
                     alternance au sein du laboratoire de recherche du CESI LINEACT, je me spécialise dans les domaines
                     passionnants de la réalité virtuelle et augmentée. Grâce à cette expérience, j'ai développé de
-                    nombreuses compétences en informatique, notamment dans le développement en général, la programmation
+                    nombreuses compétences en informatique, notamment dans le développement, la programmation
                     orientée objet (POO) ainsi que dans le domaine des réseaux.</p>
 
                 <p>En dehors de ma passion pour l'informatique, je suis un fervent musicien impliqué au sein de la
@@ -87,9 +87,7 @@
 
                 <p>Je suis constamment à la recherche de nouvelles opportunités d'apprendre, de grandir
                     professionnellement
-                    et de contribuer positivement à l'innovation technologique. N'hésitez pas à me contacter si vous
-                    souhaitez en savoir plus sur mes projets, mon parcours ou discuter de collaborations potentielles.
-                </p>
+                    et de contribuer positivement à l'innovation technologique.</p>
 
                 <p>Au plaisir de vous rencontrer virtuellement ou en personne pour partager nos passions communes !</p>
             </div>
