Adding Assiociative content

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     numérique !</p>
             </div>
             <div class="image">
-                <img src="dl-files/Moi.jpg" alt="Image À Propos">
+                <img src="dl-files/Moi.jpg" alt="présentation">
             </div>
         </div>
     </section>
@@ -92,7 +92,7 @@
                 <p>Au plaisir de vous rencontrer virtuellement ou en personne pour partager nos passions communes !</p>
             </div>
             <div class="image">
-                <img src="dl-files/Batterie.jpg" alt="Image À Propos">
+                <img src="dl-files/Batterie.jpg" alt="Batterie_à_propos">
             </div>
         </div>
     </section>
@@ -183,7 +183,7 @@
                 </ul>
             </div>
             <div class="image">
-                <img src="dl-files/Atelier-flexible-de-production_web-736x491.jpg" alt="CESI LINEACT présentation">
+                <img src="dl-files/Atelier-flexible-de-production_web-736x491.jpg" alt="CESI_LINEACT_présentation">
             </div>
         </div>
     </section>
@@ -247,6 +247,8 @@
                     espace virtuel.</p>
                 <h4>Fonctionnalités</h4>
                 <ul style="text-align: left;">
+                    <li>Lien avec un casque VR</li>
+                    <li>Simuler un casque VR</li>
                     <li>Attraper une raquette par main</li>
                     <li>Se téléporter</li>
                     <li>Attraper la balle</li>
@@ -263,6 +265,110 @@
             tests que je
             faisais afin de ne plus refaire les mêmes erreurs à l'avenir et d'être certain d'avoir appris de
             celles-ci.</p>
+        </div>
+    </section>
+    <div class="separator"></div>
+
+    <section class="Vie_assos">
+        <div class="content" style="text-align: center;">
+            <h2>Vie assiociative</h2>
+            <div class="container">
+                <div class="content" style="text-align: center;">
+                    <h3>CESI</h3>
+                    <div class="container" style="text-align: center;">
+                        <div class="content">
+                            <h4>Club de musique CEZIK'</h4>
+                            <p>Dans ce club assiociatif au CESI de Rouen, j'occupe le post de président depuis février
+                                2023.
+                                Depuis mon passage entant que président j'ai eu l'occasion de porter plusieurs projets
+                                notamment celui d'organiser un concert dans le CESI ou encore l'achat de nombreux
+                                instruments et matériels afin de produire des concerts avec davantage de qualité.</p>
+                            <p>Ce club est une véritable expression de ma passion pour la musique et un moyen de la
+                                partager
+                                ou de faire découvrir cette passion à d'autres curieux voulant découvrir cet univers.
+                                C'est
+                                plus qu'un moyen de s'exprimer c'est un moyen de partager et apprendre avec d'autres
+                                personnes ce qui est dans l'esprit du CESI mais aussi dans celui de la musique.</p>
+                        </div>
+                        <div class="content">
+                            <div class="imageCenter">
+                                <img src="dl-files/Concert.png" alt="Concert_au_CESI" style="max-width: 100%;">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content" style="text-align: center;">
+                        <div class="container">
+                            <div class="content">
+                                <h4>Club Robotique CER (CESI Experimental Robotics)</h4>
+                                <p>Dans ce club assiociatif au CESI de Rouen j'ai eu l'occasion de travailler sur le
+                                    projet
+                                    CRB-1
+                                    (CESI ROLL BOT) qui porte sur la construction, création et gestion du financement du
+                                    robot
+                                    de l'univers Star Wars BB-8.</p>
+                                <p>Ce projet m'a permis de comprendre le fonctionnement d'un robot, la communication
+                                    entre
+                                    ses
+                                    différents moteurs ou composants, la gestion de la mécanique pour que la sphère
+                                    tourne
+                                    en
+                                    maintenant l'intérieur en place tout en maintenant aussi la tête du robot.</p>
+                                <p>J'ai aussi découvert le domaine de la synthèse additive (en d'autres termes
+                                    l'impression-3D)
+                                    qui nous a permis de concevoir à partir de modèles existants une coque et une tête
+                                    pour
+                                    notre robot.</p>
+                            </div>
+                            <div class="content">
+                                <div class="imageCenter">
+                                    <img src="dl-files/crb-1.jpg" alt="CRB-1" style="max-width: 100%;">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="content" style="text-align: center;">
+                    <h3>En dehors du CESI</h3>
+                    <div class="content" style="text-align: center;">
+                        <h4>Société Musicale de Criquetot L'Esneval</h4>
+                        <p>Ayant été élève dans cette association en 2008 et ce jusqu'en 2021, j'ai appris a jouer de la
+                            batterie puis
+                            l'ensemble des percussions ainsi que de nombreuses notions de solfège. Ensuite je suis
+                            rentré entant que percussionniste en 2010 dans l'orchestre Junior, puis dans l'orchestre
+                            harmonique en 2014 et suis passé par la suite référent batteur dans l'orchestre Junior en
+                            2017 puis dans l'orchestre harmonique en 2019. Ainsi j'ai pu acquérir de nombreuses
+                            compétences en matière musicale comme dans la communication ainsi que dans la gestion.</p>
+                        <p>Ce n'est pas tout, depuis Janvier 2023 je suis passé chef d'orchestre à l'orchestre Junior et
+                            ai effectué mon premier concert 4mois plus tard. J'ai par conséquent développé des
+                            compétences comme l'écoute, l'attention, la rigueur mais aussi la précision la gestion du
+                            temps et surtout la gestion du stresse. En effet être chef d'orchestre est une grande
+                            opportunité musicale comme humaine car elle me permet de faire beaucoup de rencontre
+                            d'acquérir de nombreuses compétences, de les parfaires et d'être chaque jour plus fort.
+                            Grâce à ça, j'ai eu l'opportunité en Août 2023 de diriger un orchestre regroupant les plus
+                            grandes associations musicales de la région Normandie comprenant y compris des musiciens
+                            comme chefs d'orchestre professionnels.</p>
+                        <p>Pour conclure la musique est ma passion et une manière de m'exprimer, de m'épanouir et de
+                            créer un équilibre dans mon quotidien. Que ce
+                            soit à travers la batterie, les percussions ou par la direction d'orchestre. Cette passion
+                            en effet me demande du temps et c'est pour ça que précédemment je parlais de gestion du
+                            temps car le temps est précieux et il faut s'organiser afin de pouvoir intégrer dans son
+                            quotidien des passions tel que la musique. Je recommande à chacun de consacrer du temps à la
+                            musique dans la semaine afin de souffler faire une pause voir se défouler, c'est à mon sens
+                            essenciel et j'espère que vous le partagerez.</p>
+                        <div class="imageCenter">
+                            <img src="dl-files/Capture d'écran 2023-07-26 113332.png" alt="Direction_orchestre"
+                                style="max-width: 50%;">
+                        </div>
+                        <p>Pour d'avantage d'informations sur cette association vous pouvez accéder aux lien ci-dessous.
+                        </p>
+                        <div class="buttons">
+                            <a
+                                href="https://www.criquetot-lesneval.fr/annuaire-des-associations/societe-musicale">Site_Web</a>
+                            <a href="https://www.facebook.com/SocieteMusicaleCriquetot/?locale=fr_FR">Facebook</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <div class="separator"></div>
