responsive for mobile adding

--- a/index.html
+++ b/index.html
@@ -355,9 +355,11 @@
                             quotidien des passions tel que la musique. Je recommande à chacun de consacrer du temps à la
                             musique dans la semaine afin de souffler faire une pause voir se défouler, c'est à mon sens
                             essenciel et j'espère que vous le partagerez.</p>
-                        <div class="imageCenter">
-                            <img src="dl-files/Capture d'écran 2023-07-26 113332.png" alt="Direction_orchestre"
-                                style="max-width: 50%;">
+                        <div class="content">
+                            <div class="imageCenter">
+                                <img src="dl-files/Capture d'écran 2023-07-26 113332.png" alt="Direction_orchestre"
+                                    style="max-width: 50%;">
+                            </div>
                         </div>
                         <p>Pour d'avantage d'informations sur cette association vous pouvez accéder aux lien ci-dessous.
                         </p>
