--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/dl-files/BackgroundV1.webp" type="image/x-icon">
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -15,6 +16,9 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="/dl-files/CV_PAUL_BREON.pdf">CV</a></li>
+                <li><a href="https://github.com/PoloBrn">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/paul-br%C3%A9on-b7a083257">LinkedIn</a></li>
             </ul>
         </nav>
     </header>
@@ -23,7 +27,9 @@
     <section id="home" class="section home">
         <div class="content">
             <h1>Hello, I'm Paul BREON</h1>
-            <p>A Computer Science Master Student at CESI & Apprentice in a Reacherch Laboratory in CESI LINEACT</p>
+            <p>Computer Science Master Student at CESI & Apprentice in a Reacherch Laboratory in CESI LINEACT.</p>
+            <p>Drummer and conductor.</p>
+            <p>Vice President for Community Life in the CESI Student Office.</p>
         </div>
     </section>
 
@@ -39,12 +45,12 @@
             <li><strong>2023:</strong> Joined a research lab as an apprentice.</li>
             <li><strong>2024:</strong> Joined a research lab as an intern.</li>
         </ul>
-        <p>I'm also a passionate of music! I've realize a lots of things as a musician:</p>
+        <p>I'm also a passionate about music! I've realized a lot of things as a musician:</p>
         <ul>
-            <li><strong>2015:</strong> Integration in an association of music as a drumer</li>
-            <li><strong>2020:</strong> First diplome in drums after 10years of practice.</li>
+            <li><strong>2015:</strong> Integration in an association of music as a drummer</li>
+            <li><strong>2020:</strong> First diploma in drums after 10 years of practice.</li>
             <li><strong>2023:</strong> First concert as a conductor in an association.</li>
-            <li><strong>2024:</strong> Participation as a conductor and drumer in an orchestra with professionnals.</li>
+            <li><strong>2024:</strong> Participation as a conductor and drummer in an orchestra with professionals.</li>
             <li><strong>2024:</strong> Start learning trombone.</li>
         </ul>
     </section>
@@ -53,24 +59,37 @@
     <section id="projects" class="section projects">
         <h2>Student Projects</h2>
         <div class="project-list">
+        <div class="project">
+            <h3>C++ project</h3>
+            <p>The objective is to create an app to edit a database with a graphical interface. <a href="https://github.com/eraflo/POO_Project">View on GitHub</a></p>
+        </div>
             <div class="project">
-                <h3>C# Project</h3>
+                <h3>C# project</h3>
                 <p>The objective is to recreate a folder explorer like the one in Windows using C# library.</p>
-            </div>
-            <div class="project">
-                <h3>Web Project</h3>
-                <p>The main topic is to discover how does the web works with PHP, HTML, CSS, JavaScript. <a href="https://github.com/PoloBrn/WebProject">View on GitHub</a></p>
             </div>
             <div class="project">
                 <h3>Algorithm project</h3>
                 <p>The objective is to create a little like Google Maps with an algorithm.
                     We also discover the Traveler's problem and try to solve it in python using ants algorithm for example.</p>
             </div>
+            <div class="project">
+                <h3>Web project</h3>
+                <p>The main topic is to discover how does the web works with PHP, HTML, CSS, JavaScript. <a href="https://github.com/PoloBrn/WebProject">View on GitHub</a></p>
+            </div>
+            <div class="project">
+                <h3>Network project</h3>
+                <p>The objective is to understand how to configure IP adress and create LAN in a big network, how to securize it and how to manage it.</p>
+            </div>
         </div>
     </section>
     <section id="projects" class="section projects">
         <h2>Profesional projects</h2>
         <div class="project-list">
+            <div class="project">
+                <h3>ROS Unity Project</h3>
+                <p>A CESI LINEACT package to communicate directly with ROS and Unity in VR.
+                    It permit to make some more digital twin of robots and communicate with the real one directly.</p>
+            </div>
             <div class="project">
                 <h3>Factory Design</h3>
                 <p>As part of the digital twin, these will allow to integrate scientific work in pedagogy to a large population of students through the project Automated System (also called Factory Design).
@@ -79,7 +98,7 @@
             </div>
             <div class="project">
                 <h3>LOOPER</h3>
-                <p>A CESI LINEACT project to generate human action's datasets in VR with multi point of view.</p>
+                <p>A CESI LINEACT project to generate human action's datasets in VR with multi point of view by using motion capture and creating a LINEACT data format.</p>
             </div>
         </div>
     </section>
