--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/dl-files/BackgroundV1.webp" type="image/x-icon">
-    <title>Portfolio</title>
+    <title>Paul BREON Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -57,7 +57,7 @@
 
     <!-- Projects Section -->
     <section id="projects" class="section projects">
-        <h2>Student Projects</h2>
+        <h2>Student projects</h2>
         <div class="project-list">
         <div class="project">
             <h3>C++ project</h3>
@@ -86,7 +86,7 @@
         <h2>Profesional projects</h2>
         <div class="project-list">
             <div class="project">
-                <h3>ROS Unity Project</h3>
+                <h3>ROS Unity project</h3>
                 <p>A CESI LINEACT package to communicate directly with ROS and Unity in VR.
                     It permit to make some more digital twin of robots and communicate with the real one directly.</p>
             </div>
@@ -99,6 +99,24 @@
             <div class="project">
                 <h3>LOOPER</h3>
                 <p>A CESI LINEACT project to generate human action's datasets in VR with multi point of view by using motion capture and creating a LINEACT data format.</p>
+            </div>
+        </div>
+    </section>
+    </section>
+    <section id="projects" class="section projects">
+        <h2>Personnal projects</h2>
+        <div class="project-list">
+            <div class="project">
+                <h3>3 2 1 Dimension!</h3>
+                <p>A little 3D game that play with the perspective of the camera.</p>
+                <video controls autoplay loop>
+                    <source src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="project">
+                <h3>Escape Game VR (Collaboration with Louis Chochoy)</h3>
+                <p>An escape game in virtual reality to use virtual reality interactions and avatar management in virtual reality.</p>
+                
             </div>
         </div>
     </section>
