--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/dl-files/BackgroundV1.webp" type="image/x-icon">
     <title>Paul BREON Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="dl-files/BackgroundV1.webp" type="image/x-icon">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -16,7 +16,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="/dl-files/CV_PAUL_BREON.pdf">CV</a></li>
+                <li><a href="dl-files/CV_PAUL_BREON.pdf">CV</a></li>
                 <li><a href="https://github.com/PoloBrn">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/paul-br%C3%A9on-b7a083257">LinkedIn</a></li>
             </ul>
