--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <li><strong>2023:</strong> Joined a research lab as an intern.</li>
             <li><strong>2023:</strong> Joined a research lab as an apprentice.</li>
             <li><strong>2024:</strong> Joined a research lab as an intern.</li>
+            <li><strong>2025:</strong> Joined a research lab as an intern in Hungary.</li>
         </ul>
         <p>I'm also a passionate about music! I've realized a lot of things as a musician:</p>
         <ul>
@@ -52,6 +53,7 @@
             <li><strong>2023:</strong> First concert as a conductor in an association.</li>
             <li><strong>2024:</strong> Participation as a conductor and drummer in an orchestra with professionals.</li>
             <li><strong>2024:</strong> Start learning trombone.</li>
+            <li><strong>2025:</strong> Member of the association's office.</li>
         </ul>
     </section>
 
@@ -118,18 +120,16 @@
                 <p>An escape game in virtual reality to use virtual reality interactions and avatar management in virtual reality.</p>
                 
             </div>
+            <div class="project">
+                <h3>Godot little Game</h3>
+                <p>A way to show my ability to quickly take control of several 3D/2D engines. Godot is an open source 3D/2D engine, hence my choice for it.</p>
+            </div>
+            <div class="project">
+                <h3>Reinforcement Learning</h3>
+                <p>To improve my skills and develop new ones, I did a small project related to AI in Python. The AI simply has to play the 'Snake' game and seek to achieve the best score without knowing in advance the positions of the elements allowing it to grow.</p>
+                <a href="https://github.com/PoloBrn/IA-Reinforcement-Tetris">View on GitHub</a>
+            </div>
         </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="section contact">
-        <h2>Contact Me</h2>
-        <form>
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
     </section>
 
     <!-- Footer -->
