--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
             <div class="project">
                 <h3>Reinforcement Learning</h3>
-                <p>To improve my skills and develop new ones, I did a small project related to AI in Python. The AI simply has to play the 'Snake' game and seek to achieve the best score without knowing in advance the positions of the elements allowing it to grow.</p>
+                <p>To improve my skills and develop new ones, I completed a small Python-based AI project. The AI simply had to play the 'Tetris' game and try to get the highest score possible without knowing the positions of the elements in advance.</p>
                 <a href="https://github.com/PoloBrn/IA-Reinforcement-Tetris">View on GitHub</a>
             </div>
         </div>
