Add video for AI renforcement

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                 <h3>Reinforcement Learning</h3>
                 <p>To improve my skills and develop new ones, I completed a small Python-based AI project. The AI simply had to play the 'Tetris' game and try to get the highest score possible without knowing the positions of the elements in advance.</p>
                 <a href="https://github.com/PoloBrn/IA-Reinforcement-Tetris">View on GitHub</a>
+                <video controls autoplay loop>
+                    <source src="dl-files/IA-Reinforcement-Tetris.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
     </section>
