--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="project">
                 <h3>3 2 1 Dimension!</h3>
                 <p>A little 3D game that play with the perspective of the camera.</p>
-                <video controls autoplay loop>
+                <video controls autoplay loop muted>
                     <source src="dl-files/3 2 1 Dimensions ! 2023-07-22 12-45-32.mp4" type="video/mp4">
                 </video>
             </div>
@@ -128,7 +128,7 @@
                 <h3>Reinforcement Learning</h3>
                 <p>To improve my skills and develop new ones, I completed a small Python-based AI project. The AI simply had to play the 'Tetris' game and try to get the highest score possible without knowing the positions of the elements in advance.</p>
                 <a href="https://github.com/PoloBrn/IA-Reinforcement-Tetris">View on GitHub</a>
-                <video controls autoplay loop>
+                <video controls autoplay loop muted>
                     <source src="dl-files/IA-Reinforcement-Tetris.mp4" type="video/mp4">
                 </video>
             </div>
